--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A website created by ♙ϽIꓤƎꟽ⅄∀♙">
-    <title>♙ϽIꓤƎꟽ⅄∀♙</title>
+    <title>Classes 2023-2024</title>
     <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/Etoiles.png">
     <style>
         body{font-family: Arial, Helvetica, sans-serif;}
