--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A website created by ♙ϽIꓤƎꟽ⅄∀♙">
-    <title>Classes 2023-2024</title>
-    <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/Etoiles.png">
+    <title>Classes 2023&Diamond;2024</title>
+    <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/classes.png">
     <style>
         body{font-family: Arial, Helvetica, sans-serif;}
         h1{text-align: center; color: aquamarine; font-size:40px}
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body style="background-color:#000">
-    <h1>Classes 2023-2024</h1>
+    <h1>Classes 2023&Diamond;2024</h1>
     <div class="niveau">
         <div class="classe"><h2>TA</h2><p>AIT-HEMID Meriem<br>BELKESSAM Ariles<br>CROAIN Paul<br>CROCQUEY Sacha<br>DECRUCQ Adrien<br>DHORME Margaux<br>FREDE PREUX Julien<br>FROISSART Quentin<br>FROMONT Tom<br>GAUTHIER Emrys<br>HENKOU Colombine<br>LAMORY Thibault<br>LAUNOIS Clovis<br>LE BLAN Romain<br>LE FLEM Louis-Jean<br>LEFEBVRE-PERROTTE Noe<br>LEPOUTRE Antonin<br>LEVEL Camille<br>LINQUE Hugo<br>LIZAK-REMY Adam<br>LOMBARD Manech<br>MAMBO Kaldj<br>MAZRAANI Rayan<br>MINAKU KUNDJI Auby<br>PAYOUX Alice<br>POLY Angele<br>SARKISSIAN Celestine<br>THOME Hermance<br>VANPOPERINGHE Oscar</p></div>
         <div class="classe"><h2>TB</h2><p>AIT OUAHMAN Bilal<br>AZNAY Mohamed<br>BELHADJ Orjwane<br>BENTAYEB Fadel<br>BERNARD Camille<br>BOUAKICHA Zayd<br>BOUIN Matthieu<br>CARPENTIER Amaury<br>CLAIRET-DELVAS Ilian<br>CLERMONT-LAROYE Oscar<br>DERIMIAN Sophie<br>DESBONNET Ulysse<br>DUCROT Oscar<br>HATTAB Kamil<br>HOMBLE Emma<br>LESIEU Lenny<br>MABAOUJ Meissa<br>MASSE Lucas<br>PITTA Matteo<br>PROVOT Blanche<br>PUTTAERT Joachim<br>QUENARDEL Louis<br>ROUSSEL Martin<br>SPINOSO Alessandro<br>VAESKEN Anaïs</p></div>
