--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <meta name="theme-color" content="#0F0">
     <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/classes.png">
     <style>
-        body{font-family: Arial, Helvetica, sans-serif;}
-        h1{text-align: center; color: aquamarine; font-size:40px}
-        h2{color: rgb(39, 66, 221); font-size: 220%; text-align: center;}
+        body{background-color: #EEF; font-family: Arial, Helvetica, sans-serif;}
+        h1{text-align: center; color: rgb(0, 46, 31); font-size:40px}
+        h2{color: #003; font-size: 220%; text-align: center;}
         .niveau{display: flex; justify-content: space-between;  flex-wrap: nowrap;}
-        .classe{min-width: 250px; padding: 20px; margin: 5px; border: 3px solid rgb(39, 66, 221); border-radius: 10px; background-color: #001; color: aquamarine;}
+        .classe{min-width: 250px; padding: 20px; margin: 5px; border: 3px solid #003; border-radius: 10px; background-color: #DDF; color: rgb(0, 46, 31);}
+        @media (prefers-color-scheme: dark) {
+            body{background-color:#000;}
+            h1{color: aquamarine;}
+            h2{color: rgb(39, 66, 221);}
+            .classe{border-color: rgb(39, 66, 221); background-color: #001; color: aquamarine;}
+        }
     </style>
 </head>
 <body style="background-color:#000">
