--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body style="background-color:#000">
+<body>
     <h1>Classes 2023&Diamond;2024</h1>
     <div class="niveau">
         <div class="classe"><h2>TA</h2><p>AIT-HEMID Meriem<br>BELKESSAM Ariles<br>CROAIN Paul<br>CROCQUEY Sacha<br>DECRUCQ Adrien<br>DHORME Margaux<br>FREDE PREUX Julien<br>FROISSART Quentin<br>FROMONT Tom<br>GAUTHIER Emrys<br>HENKOU Colombine<br>LAMORY Thibault<br>LAUNOIS Clovis<br>LE BLAN Romain<br>LE FLEM Louis-Jean<br>LEFEBVRE-PERROTTE Noe<br>LEPOUTRE Antonin<br>LEVEL Camille<br>LINQUE Hugo<br>LIZAK-REMY Adam<br>LOMBARD Manech<br>MAMBO Kaldj<br>MAZRAANI Rayan<br>MINAKU KUNDJI Auby<br>PAYOUX Alice<br>POLY Angele<br>SARKISSIAN Celestine<br>THOME Hermance<br>VANPOPERINGHE Oscar</p></div>
