--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A website created by ♙ϽIꓤƎꟽ⅄∀♙">
+    <meta name="theme-color" content="#0FF">
     <title>Classes 2023&Diamond;2024</title>
-    <meta name="theme-color" content="#0F0">
     <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/classes.png">
     <style>
         body{background-color: #EEF; font-family: Arial, Helvetica, sans-serif;}
