--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="description" content="A website created by ♙ϽIꓤƎꟽ⅄∀♙">
     <title>Classes 2023&Diamond;2024</title>
     <link rel="icon" type="image/png" sizes="100x100" href="https://1089x.github.io/Images/classes.png">
+    <meta name="theme-color" content="#2742dd">
     <style>
-        header {background-color: #0F0; color: #FFFFFF;}
         body{background-color: #EEF; font-family: Arial, Helvetica, sans-serif;}
         h1{text-align: center; color: rgb(0, 46, 31); font-size:40px}
         h2{color: #003; font-size: 220%; text-align: center;}
